[package]
name = "vat"
version = "0.1.0"
edition = "2021"

[dependencies]
url = { version = "2.5.4", features = ["serde"] }
toml = "0.8.21"
anyhow = "1.0.98"
serde = {version = "1.0.219", features= ["derive"]}
clap = { version = "4.5.27", features = ["derive"] }
fs2 = "0.4.3"
semver = {version = "1.0.25", features = ["serde"]}
thiserror = "2.0.12"
git2 = "0.20.1"
console = "0.15.11"
dirs-next = "2.0.0"
dirs = "6.0.0"
fs_extra = "1.0.1"   
zip = "3.0.0"